# cosmic-fastapi

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  copier.yml  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yml  template-ci.yml
docs/: cosmic-python-coverage.md
docs/adr/: 0001-modern-cosmic-python-standard.md  0002-domain-models-are-framework-independent.md  0003-fastapi-and-pydantic-live-at-boundaries.md  0004-sqlalchemy-2-persistence-behind-repositories.md  0005-explicit-composition-and-message-dispatch.md  0006-async-is-an-explicit-end-to-end-choice.md  0007-tooling-and-test-pyramid.md  0008-static-typing-with-pyrefly.md  0009-conventional-commits.md  0010-adr-lifecycle-and-decision-pruning.md  0013-aggregates-define-consistency-boundaries.md  0014-cqrs-read-models-are-purpose-built.md  0015-copier-template-engine.md  0015-mcp-is-an-opt-in-primary-adapter.md  0016-external-message-buses-use-a-transactional-outbox.md  README.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260531_0001_create_users.py  20260531_0002_create_outbox_events.py
scripts/: prune_decisions.py
src/template/: asgi.py  bootstrap.py  main.py  router.py  version.py
src/template/adapters/: outbox.py  queries.py  repository.py  unit_of_work.py
src/template/adapters/models/: __init__.py  base.py  outbox.py  user.py
src/template/addons/: __init__.py
src/template/addons/kafka/: __init__.py  messagebus.py  worker.py
src/template/addons/mcp/: __init__.py  application.py  server.py
src/template/domain/: schemas.py
src/template/domain/commands/: __init__.py  user.py
src/template/domain/events/: monitor.py  user.py
src/template/domain/models/: __init__.py  base.py  user.py
src/template/entrypoint/: __init__.py  dependencies.py  monitor.py  schemas.py  users.py
src/template/integration_events/: __init__.py  user.py
src/template/service_layer/: __init__.py  handlers.py  integration_messagebus.py  messagebus.py  outbox.py  queries.py  read_models.py  repository.py  unit_of_work.py
src/template/settings/: api_settings.py  database_settings.py  kafka_settings.py  uvicorn_settings.py
src/template/utils/: __init__.py  formatting.py
template/: .dockerignore  .gitignore  .python-version.jinja  AGENTS.md  CLAUDE.md  Dockerfile.jinja  LICENSE.jinja  Makefile.jinja  README.md.jinja  alembic.ini  docker-compose.yaml.jinja  pyproject.toml.jinja
template/.github/workflows/: build.yml.jinja
template/docs/adr/: 0001-modern-cosmic-python-standard.md  0002-domain-models-are-framework-independent.md  0003-fastapi-and-pydantic-live-at-boundaries.md  0004-sqlalchemy-2-persistence-behind-repositories.md  0006-async-is-an-explicit-end-to-end-choice.md  0008-static-typing-with-pyrefly.md  0011-pydantic-message-schemas-with-plain-domain-aggregates.md  0012-camel-case-json-message-contracts.md  0016-aggregate-persistence-write-back.md  0017-async-persistence-by-default.md  0018-postgresql-default-with-pgvector.md  0019-coverage-from-unit-and-e2e-tests.md  README.md  template.md
template/migrations/: README  env.py.jinja
template/scripts/: prune_decisions.py
template/src/{{ package_name }}/: asgi.py.jinja  bootstrap.py.jinja  main.py.jinja  router.py.jinja  version.py.jinja
template/src/{{ package_name }}/adapters/: __init__.py  queries.py.jinja  repository.py.jinja  unit_of_work.py.jinja
template/src/{{ package_name }}/domain/: __init__.py  (+1 more)
template/tests/: conftest.py.jinja
template/tests/integration/: conftest.py.jinja  test_migrations.py  test_migrations.py.jinja  test_persistence.py.jinja  test_unit_of_work.py.jinja
template/tests/unit/: test_asgi.py.jinja  test_bootstrap.py.jinja
tests/: conftest.py  test_bake.py
tests/e2e/entrypoint/: test_monitor.py  test_users.py
tests/integration/: test_mcp.py  test_migrations.py  test_persistence.py
tests/unit/: test_asgi.py  test_bootstrap.py
tests/unit/addons/: __init__.py
tests/unit/domain/: test_messages.py  test_schemas.py
tests/unit/entrypoint/: test_dependencies.py  test_schemas.py
tests/unit/integration_events/: __init__.py  test_user.py
tests/unit/service_layer/: test_handlers.py  test_messagebus.py  test_outbox.py
tests/unit/settings/: test_api_settings.py  test_kafka_settings.py  test_uvicorn_settings.py
tests/unit/utils/: test_formatting.py
(+41 files in other folders)
