[project]
name = "cosmic-fastapi-template"
version = "0.1.0"
description = "Copier template that scaffolds a Cosmic Python FastAPI service."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.4.0",
    "pytest>=8.4.0",
    "pre-commit>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
